# blocoDeNotasRust-Gtk

./: Cargo.toml  README.md  fernando.txt  hide.txt  styles.css  texto_teste.txt
src/: css_provider.rs  main.rs  mainWindow.glade  mainWindow.glade~  main_window.rs  singleton.rs
