[package]
name = "blocoDeNotasRust-Gtk"
version = "0.1.0"
authors = ["Fernando Marca Magalhães <59258828+fernandomarca@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.0"
gio = "0.14.0"
gdk="0.14.0"